--- a/Ex01/index.html
+++ b/Ex01/index.html
@@ -6,6 +6,12 @@
     <title>Evolução das habilidades em HTML</title>
 </head>
 <body>
-    <p> Olá. Estamos avançando no curso Futuro DEV e neste momentos iremos retornar ao aprendizados de HTML para que sigamos evoluindo as habilidades de desevolvedor WEB. Acredito que com um aprodundamento nesta matéria conseguiremos fazer uma junção dos aprendizados de backend adquiridos no primeiro módulo e com isso evoluir e aprimorar a API que criamos ao finalizar o projeto de encerramento do módulo 1. Estamos todos ansiosos para evoluir em todo esse conhecimento incírvel.</p>
+    <p> Olá. Estamos avançando no curso Futuro DEV e neste momento iremos 
+        retornar ao aprendizado de HTML para que sigamos evoluindo as habilidades 
+        de desevolvedor WEB. Acredito que com um aprodundamento nesta matéria 
+        conseguiremos fazer uma junção dos aprendizados de backend adquiridos no 
+        primeiro módulo e com isso evoluir e aprimorar a API que criamos ao 
+        finalizar o projeto de encerramento do módulo 1. <br>
+        Estamos todos ansiosos para evoluir em todo esse conhecimento incrível.</p>
 </body>
 </html>
